pushing cowlist up to add

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon server",
     "build": "webpack",
     "watch": "webpack -w",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "schemas": "mysql -u root < schema.sql"
   },
   "keywords": [],
   "author": "Hack Reactor <curriculum.team@hackreactor.com>",
@@ -17,6 +18,7 @@
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
